# ICT289_obstacle_course

./: .gitignore  .gitmodules  AssignmentTwo.cbp  AssignmentTwo.depend  AssignmentTwo.layout  AxisAlignedPlane.cpp  AxisAlignedPlane.h  BasicPlatform.cpp  BasicPlatform.h  BounceablePlane.cpp  BounceablePlane.h  CMakeLists.txt  Coin.cpp  Coin.h  GlobalVariablesAndStructs.cpp  IModule.h  Module.cpp  Module.h  Object.h  PlainModule.h  TempPlatform.cpp  XAlignedPlane.cpp  XAlignedPlane.h  XMovingPlatform.cpp  XMovingPlatform.h  YAlignedPlane.cpp  YAlignedPlane.h  YMovingPlatform.cpp  YMovingPlatform.h  ZAlignedPlane.cpp  ZAlignedPlane.h  ball.h  bounds2D.h  christo.raw  colour.h  direction.h  main.cpp  mainHeader.h  moduleOneTest.cpp  moduleOneTest.h  (+6 more)
documentation/: Donic the ledgehog.pptx  GroupDeclarationSheet.rtf  Individual-accounting with calculated times.xls  Individual-accounting.xls  Report.docx
documentation/UML/: UML.dia
images/: kye.raw
lib/: CMakeLists.txt
res/: rory.raw
src/: AxisAlignedPlane.h  BasicPlatform.cpp  CMakeLists.txt  Coin.cpp  Coin.h  Object.h  TempPlatform.h  XAlignedPlane.h  XMovingPlatform.cpp  YMovingPlatform.cpp  ZAlignedPlane.cpp  ball.h  bounds2D.h  colour.h  main.cpp  mainHeader.h
